--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.16.0",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
